# blastcube

./: Cargo.toml
src/: blast_machine_evaluator.rs  challenge.rs  main.rs  move.rs  prelude.rs  test.rs
src/cube/: coord.rs  cubie.rs  facie.rs  mod.rs  surface.rs
src/solver/: kociemba.rs  mitm.rs  mod.rs  naive_iddfs.rs
