[package]
name = "blastcube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
enum-iterator = "1.2.0"
lazy_static = "1.4.0"
log = "0.4.17"
simple_logger = "2.3.0"
smallvec = "1.9.0"

[dev-dependencies]
lazy_static = "1.4.0"
quickcheck = "0.9"
quickcheck_derive = "0.3.0"
quickcheck_macros = "1.0.0"
rand = "0.7"
